--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="breaking_news">Breaking News</string>
     <string name="search_news">Search News</string>
+    <string name="search">Search</string>
+    <string name="favorite">Favorite</string>
+    <string name="favorited">Favorite</string>
 </resources>
